--- a/.babelrc
+++ b/.babelrc
@@ -1,34 +1,15 @@
-// {
-//   "plugins": [
-//     [
-//       "module-resolver",
-//       {
-//         "root": ["./src"],
-//         "alias": {
-//           "test": "./test",
-//           "underscore": "lodash"
-//         }
-//       }
-//     ]
-//   ]
-// }
 {
-  "presets": ["react-app"],
   "plugins": [
     [
       "module-resolver",
       {
-        ".": ["./src"],
+        "root": ["./src"],
         "alias": {
-          ".":"./src",
-          "@components": "./src/components",
-          "@utils": "./src/utils",
-          "@assets": "./src/assets",
-          "@pages": "./src/pages",
-          "@hooks": "./src/hooks",
-          "myAlert": "./src/myAlert"
+          "test": "./test",
+          "underscore": "lodash"
         }
       }
     ]
   ]
 }
+
