cấu hình chung f8 ok

--- a/.babelrc
+++ b/.babelrc
@@ -3,13 +3,10 @@
     [
       "module-resolver",
       {
-        "root": ["./src"],
         "alias": {
-          "test": "./test",
-          "underscore": "lodash"
+          "~": "./src"
         }
       }
     ]
   ]
 }
-
