--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "recipe",
+  "name": "tiktok-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "normalize.css": "^8.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "sas": "^3.0.4",
-    "sass": "^1.86.3",
-    "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "babel-plugin-module-resolver": "^4.1.0",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.51.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -39,21 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.27.0",
-    "babel-plugin-module-resolver": "^5.0.2",
-    "customize-cra": "^1.0.0",
-    "eslint": "^9.24.0",
-    "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-module-resolver": "^1.5.0",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.1",
-    "prettier": "^3.5.3",
-    "react-app-rewired": "^2.2.1"
   }
 }
