--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.30.3",
+        "slick-carousel": "^1.8.1",
+        "swiper": "^11.2.6",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
