--- a/package.json
+++ b/package.json
@@ -3,22 +3,32 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.0.0",
         "@fortawesome/free-solid-svg-icons": "^6.0.0",
         "@fortawesome/react-fontawesome": "^0.1.17",
+        "@mui/icons-material": "^7.1.0",
+        "@mui/material": "^7.1.0",
+        "@mui/styled-engine-sc": "^7.1.0",
+        "@popperjs/core": "^2.11.6",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.1.1",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
-        "axios": "^0.27.2",
+        "axios": "^1.9.0",
         "classnames": "^2.3.1",
+        "framer-motion": "^12.10.0",
         "normalize.css": "^8.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-slick": "^0.30.3",
+        "slick-carousel": "^1.8.1",
+        "styled-components": "^6.1.17",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
