--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "normalize.css": "^8.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-hook-form": "^7.60.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-select": "^5.10.2",
         "react-slick": "^0.30.3",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.1.17",
