--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "devDependencies": {
         "babel-plugin-module-resolver": "^4.1.0",
         "customize-cra": "^1.0.0",
+        "gh-pages": "^6.3.0",
         "react-app-rewired": "^2.2.1",
         "sass": "^1.51.0"
     },
