--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "tiktok-ui",
+    "name": "recipe-ui",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://duongkaka.github.io/recipe_ui/",
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
@@ -44,7 +45,9 @@
         "start": "react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "predeploy": "npm run build",
+        "deloy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
